--- a/wechatApp/yunBook/miniprogram/app.json
+++ b/wechatApp/yunBook/miniprogram/app.json
@@ -1,5 +1,8 @@
 {
   "pages": [
+    "pages/demo/demo5",
+    "pages/demo4/demo4",
+    "pages/demo3/demo3",
     "pages/demo2/demo2",
     "pages/demo1/demo1",
     "pages/index/index",
@@ -34,7 +37,13 @@
         "text": "text",
         "iconPath": "",
         "selectedIconPath": ""
+      },{
+        "pagePath": "pages/demo3/demo3",
+        "text": "text",
+        "iconPath": "",
+        "selectedIconPath": ""
       }
+      
     ]
     },
   "window": {
